--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,9 @@
 
   "content_scripts": [
     {
-      "matches": ["https://nodejs.org/docs/*/api/*.html"],
+      "matches": ["https://nodejs.org/*/api/*.html"],
       "js": ["src/custom-elements.min.js", "src/main.js"],
       "css": ["./css/styles.css"]
-    },
-    {
-      "matches": ["https://shimo.im/docs/*"],
-      "css": ["./css/shimo.css"]
     }
   ]
 }
